--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name"         : "too-doo",
-  "version"      : "0.0.0",
-  "description"  : "Simple todo application.",
-  "main"         : "server.js",
-  "author"       : "m$",
-  "dependencies" : {
-    "body-parser"    : "^1.4.3",
-    "express"        : "^4.13.4",
+  "name": "too-doo",
+  "version": "0.0.0",
+  "description": "Simple todo application.",
+  "main": "server.js",
+  "author": "m$",
+  "dependencies": {
+    "body-parser": "^1.4.3",
+    "dotenv": "^2.0.0",
+    "express": "^4.13.4",
     "method-override": "^2.1.3",
-    "mongoose"       : "^4.4.12",
-    "morgan"         : "^1.1.1"
+    "mongoose": "^4.4.12",
+    "morgan": "^1.1.1",
+    "newrelic": "^1.28.1",
+    "nodemon": "^1.9.2"
   }
 }
